hiding overflow to see if it fixes broken mobile view

--- a/index.css
+++ b/index.css
@@ -18,6 +18,7 @@ body {
 	font-size: 1.5rem;
 	color: var(--white-color);
 	line-height: 2rem;
+	overflow-x: hidden;
 }
 
 .flex-centered {
